Progress on /session GET and /probanno/calculate GET, PUT
