# controllers/job.py
@@ -20,14 +20,15 @@ PROBANNO_COMPLETE_URL = '/view/probanno/complete'
 
 class Job:
 
-    def __init__(self, session_id, job, target):
+    def __init__(self, session_id, job, target, dummy=False):
         self.id = str(uuid.uuid4())
         self.status = NOT_STARTED
         self.job = job
         self.session = session_id
         self.target = target
         self.status = NOT_STARTED
-        self.update_job()
+        if not dummy:
+            self.update_job()
 
     def update_job(self):
         if db.find_by_id(db.JOB, self.id) is not None:
@@ -47,6 +48,24 @@ class Job:
         self.status = FAILURE
         self.update_job()
 
+    def to_dict_dto(self):
+        return {
+            "jid": self.id,
+            "sid": self.session,
+            "job": self.job,
+            "target": self.target,
+            "status": self.status
+        }
+
+    @classmethod
+    def from_db_tuple(cls, tup):
+        job = cls(tup[1], tup[2], tup[3], dummy=True)
+        job.id = tup[0]
+        job.status = tup[4]
+        return job
+
+
+
 
 def check_job():
     if JOB_ID in request.args:
@@ -60,6 +79,10 @@ def check_job():
 
 def job_status_page(job_id, success_url):
     return render_template("check_job.html", job_id=job_id, success_url=success_url)
+
+
+def get_job(job_id):
+    return Job.from_db_tuple(db.find_by_id(db.JOB, job_id))
 
 
 def list_jobs():
